--- a/cmake/Dockerfile
+++ b/cmake/Dockerfile
@@ -1,5 +1,15 @@
-FROM debian:bookworm-slim
-LABEL maintainer="melroy@melroy.org"
+ARG debian_version=12
+FROM debian:${debian_version}-slim
+
+ARG cppcheck_version=2.16.0
+ARG build_date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+
+LABEL org.opencontainers.image.title="CMake C++ docker image with various additional tools" \
+      org.opencontainers.image.description="CMake Docker image with gcc, g++, Boost, Ninja, Doxygen, Graphviz, clang-format, cppcheck, cpplint, gdb, valgrind, dot" \
+      org.opencontainers.image.created="${build_date}" \
+      org.opencontainers.image.authors="melroy@melroy.org" \
+      org.opencontainers.image.url="https://gitlab.melroy.org/melroy/docker-images" \
+      org.opencontainers.image.source="https://gitlab.melroy.org/melroy/docker-images"
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -17,13 +27,13 @@ RUN echo "deb-src http://deb.debian.org/debian bookworm main" >>/etc/apt/sources
 RUN apt-get update
 RUN apt-get build-dep -y cppcheck
 # Download cppcheck source code, build and install
-RUN wget -O cppcheck.tar.gz https://github.com/danmar/cppcheck/archive/2.16.0.tar.gz
+RUN wget -O cppcheck.tar.gz https://github.com/danmar/cppcheck/archive/${cppcheck_version}.tar.gz
 RUN tar -xvzf cppcheck.tar.gz
-RUN cd cppcheck-2.16.0 && \
+RUN cd cppcheck-${cppcheck_version} && \
     mkdir build && \
     cd build && \
     cmake -DUSE_MATCHCOMPILER=ON .. && \
-    cmake --build . -- -j 25 && \
+    cmake --build . -- -j 20 && \
     cmake --install .
 
 # APT install additional packages
@@ -49,7 +59,7 @@ RUN pip3 install cpplint --break-system-packages
 # Clean-up
 RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # Clean-up manual build(s)
-RUN rm -rf cppcheck.tar.gz && rm -rf cppcheck-2.16.0
+RUN rm -rf cppcheck.tar.gz && rm -rf cppcheck-${cppcheck_version}
 
 # set the locale to en_US.UTF-8
 RUN echo "en_US.UTF-8 UTF-8" >/etc/locale.gen && \
