--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,14 @@
+default:
+  before_script:
+    # Docker Hub
+    - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_REGISTRY"
+    # Using the built-in variables by GitLab
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+
+  after_script:
+    - docker logout $CI_REGISTRY
+    - docker logout
+
 stages:
   - build
 
@@ -9,14 +20,6 @@ workflow:
   rules:
     - if: '$CI_PROJECT_NAMESPACE == "melroy" && $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
 
-# Authenticate to Docker Hub & GitLab Container Registry
-.docker-login: &docker-login
-  before_script:
-    # Docker Hub
-    - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_REGISTRY"
-    # Using the built-in variables by GitLab
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
-
 pnpm-alpine:build:
   stage: build
   tags:
@@ -26,7 +29,6 @@ pnpm-alpine:build:
       - NODE_VERSION: ["22", "23"]
         # Important: No array for PNPM_VERSION
         PNPM_VERSION: "10.11.0"
-  <<: *docker-login
   script:
     - cd pnpm
     - export IMAGE_NAME="pnpm:${NODE_VERSION}"
@@ -51,7 +53,6 @@ cmake:build:
   #  matrix:
   #    - DEBIAN_VERSION: "bookworm"
   #      CPPCHECK_VERSION: "2.16.0"
-  <<: *docker-login
   script:
     - cd cmake
     - export IMAGE_NAME="cmake:${DEBIAN_VERSION}-cppcheck-${CPPCHECK_VERSION}"
@@ -72,7 +73,6 @@ gtk-cmake-ninja:build:
   variables:
     DEBIAN_VERSION: "bookworm"
     CPPCHECK_VERSION: "2.16.0"
-  <<: *docker-login
   script:
     - cd gtk3-cmake-ninja
     - export IMAGE_NAME="gtk3-docker-cmake-ninja:${DEBIAN_VERSION}"
