--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,6 @@ default:
     # Using GitLab deploy token
     - echo "$CI_DEPLOY_PASSWORD" | docker login -u "$CI_DEPLOY_USER" --password-stdin "$CI_REGISTRY"
 
-#  after_script:
-#    - docker logout $CI_REGISTRY
-#    - docker logout
-
 stages:
   - build
 
@@ -138,3 +134,24 @@ php:build:
         -f Dockerfile .
     - docker push $CI_REGISTRY_IMAGE/$IMAGE_NAME
     - docker push $DOCKERHUB_REGISTRY/$DOCKERHUB_USERNAME/$IMAGE_NAME
+
+rust:build:
+  stage: build
+  tags:
+    - shell
+  variables:
+    RUST_VERSION: "1.93"
+    NODE_VERSION: "24.13.0"
+  script:
+    - cd rust
+    - export IMAGE_NAME="rust:${RUST_VERSION}-node-${NODE_VERSION}"
+    - |
+      docker build \
+        --build-arg php_version=${RUST_VERSION} \
+        --build-arg node_version=${NODE_VERSION} \
+        -t $CI_REGISTRY_IMAGE/$IMAGE_NAME \
+        -t $DOCKERHUB_REGISTRY/$DOCKERHUB_USERNAME/$IMAGE_NAME \
+        -f Dockerfile .
+    - docker push $CI_REGISTRY_IMAGE/$IMAGE_NAME
+    - docker push $DOCKERHUB_REGISTRY/$DOCKERHUB_USERNAME/$IMAGE_NAME
+
